# my-language

./: CMakeLists.txt  README.md  ast.c  ast.h  builtins.c  builtins.h  env.c  env.h  lexer.c  lexer.h  main.c  parser.c  parser.h  run_tests.ps1  runtime.c  runtime.h  token.h  token_shared.h  value.c  value.h
examples/: classes.nr  dictionaries.nr  fancy_builtins.nr  functions.nr  hello.nr  import_cycle_a.nr  import_cycle_b.nr  import_once_helper.nr  import_once_main.nr  import_path_normalize_main.nr  list_index.nr  lists.nr  loops.nr  objects_and_lists.nr  runtime_error.nr  slash_pattern.nr  string_builtins.nr  variable.nr
examples/errors/: bad_abs.nr  bad_clock_ms.nr  bad_contains.nr  bad_floor.nr  bad_lower.nr  bad_min_type.nr  bad_randint_zero.nr  bad_substr_length.nr  bad_substr_start.nr  bad_values.nr
examples/modules/: main.nr  main_nested.nr  nested.nr  utils.nr
